# app/Http/Requests/Product/DeleteProductRequest.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace App\Http\Requests\Product;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Message;
+class DeleteProductRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            //
+            'product_id' => 'nullable',
+        ];
+    }
+
+    public function messages(): array
+    {
+        return [
+            'required' => Message::find(3),
+        ];
+    }
+}
